# blackjack-ai

./: .gitignore  README.md
analysis/: plot_training.py  requirements.txt
config/: default.cfg
core/: CMakeLists.txt
core/include/ai/: Agent.hpp  GameStateConverter.hpp  MonteCarloAgent.cpp  MonteCarloAgent.hpp  PolicyTable.cpp  PolicyTable.hpp  QLearningAgent.cpp  QLearningAgent.hpp  State.cpp  State.hpp
core/include/game/: BlackjackGame.cpp  BlackjackGame.hpp  Card.cpp  Card.hpp  Deck.cpp  Deck.hpp  GameRules.hpp  Hand.cpp  Hand.hpp
core/include/training/: ConvergenceReport.cpp  ConvergenceReport.hpp  Evaluator.cpp  Evaluator.hpp  Logger.cpp  Logger.hpp  StrategyChart.cpp  StrategyChart.hpp  Trainer.cpp  Trainer.hpp
core/include/util/: ArgParser.hpp  ConfigParser.hpp  ProgressBar.hpp
core/scripts/: benchmark.cpp  play.cpp  train.cpp
core/tests/: test_evaluator.cpp  test_game.cpp  test_hand.cpp  test_q_learning.cpp  test_trainer.cpp
docs/: commands.md
